# Yiyin-Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
assets/documents/: emoji_reactions.json  help.json  mohe.json  tarot.json
assets/images/tarot/: webp2png.py
config/: emoji_reaction.json  features.json  meme_generator.toml  roleplay.json
yiyin/choose/: __init__.py
yiyin/emoji_reaction/: __init__.py
yiyin/help/: __init__.py
yiyin/llmapi/: __init__.py
yiyin/mohe/: __init__.py
yiyin/quotes/: __init__.py  draw.py
yiyin/roleplay/: __init__.py  prompt.txt
yiyin/symmetric/: __init__.py
yiyin/tarot/: __init__.py
yiyin/toggle/: __init__.py
yiyin/translate/: __init__.py
yiyin/wolfram/: __init__.py
