[project]
name = "yiyin"
version = "0.1.0"
description = "yiyin"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[fastapi,httpx,websockets]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "nb-cli>=1.4.2",
    "pillow>=12.1.1",
    "nonebot-plugin-memes>=0.8.1",
    "nonebot-plugin-orm[default]>=0.8.3",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-emojimix>=0.4.1",
    "nonebot-plugin-wordcloud>=0.9.0",
    "nonebot-plugin-anime-trace>=0.2.3",
    "nonebot-plugin-fakemsg>=0.1.9",
]

[tool.nonebot]
plugin_dirs = ["yiyin"]
builtin_plugins = []

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
nonebot_plugin_memes = ["nonebot_plugin_memes"]
nonebot_plugin_apscheduler = ["nonebot_plugin_apscheduler"]
nonebot-plugin-wordcloud = ["nonebot_plugin_wordcloud"]
nonebot_plugin_emojimix = ["nonebot_plugin_emojimix"]
nonebot-plugin-anime-trace = ["nonebot_plugin_anime_trace"]
nonebot-plugin-fakemsg = ["nonebot_plugin_fakemsg"]
